# clifx

./: .gitignore  Cargo.toml  LICENSE.md  README.md  devenv.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
integration/: test_debian_version.sh  test_ubuntu_version.sh
script/: install.sh  release.sh
script/zig/: cc-aarch64-linux-gnu  cc-aarch64-linux-musl  cc-aarch64-macos  cc-aarch64-windows-msvc  cc-x86_64-linux-musl  cc-x86_64-macos  cc-x86_64-windows-gnu
scripts/: update_readme.sh
src/: center.rs  main.rs
src/effects/: mod.rs  shine.rs  shine2d.rs  twinkle.rs
tests/: integration_tests.rs
